--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,9 +7,11 @@ $button-padding-horizontal: 0.75rem;
 $input-padding-vertical: 0.375rem;
 $input-padding-horizontal: 0.5rem;
 $small-margin: 0.625rem;
+$large-margin: 1.25rem;
 
 
 $background: #F2E6D6;
 $main: #8FDDE7;
 $text-heavy: #333333;
+$text-light: #666666;
 $form-border: #888888;
