--- a/src/features/home/Home.scss
+++ b/src/features/home/Home.scss
@@ -1,7 +1,7 @@
-@import 'styles/mixins.scss';
-@import 'styles/variables.scss';
+@import '../../assets/styles/mixins.scss';
+@import '../../assets/styles/variables.scss';
 
-.app {
+.home {
   @include row;
   padding: $app-padding;
 }
