--- a/src/features/candidate_list/CandidateList.module.scss
+++ b/src/features/candidate_list/CandidateList.module.scss
@@ -1,5 +1,5 @@
-@import 'styles/mixins.scss';
-@import 'styles/variables.scss';
+@import 'assets/styles/mixins.scss';
+@import 'assets/styles/variables.scss';
 
 .CandidateList {
   @include col;
